Fix evidential loss 2

--- a/log_analyze.ipynb
+++ b/log_analyze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "import numpy as np\n",
     "from src.dataset import (\n",
     "    MultipleDates,\n",
-    "    PA, PADistanceMap, PAMultipleDates,\n",
+    "    PAMultipleDates,\n",
     "    MTMultipleDates\n",
     ")\n",
     "\n",
@@ -29,28 +29,27 @@
     "from src import training_generator as generator\n",
     "from src.patchesHandler import PatchesHandler, PatchesHandlerMultipleDates, PatchesHandlerEvidential\n",
     "\n",
-    "from src.trainer.evidential import TrainerEvidential, TrainerEvidentialUEO\n",
-    "import src.trainer.evidential as evidential\n",
+    "import src.manager.evidential as evidential\n",
     "\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "\n",
     "import cv2\n",
     "from src import metrics as _metric\n",
-    "from src.trainer.evidential import getMassFcn2D\n",
+    "from src.manager.evidential import getMassFcn2D\n",
     "import pandas as pd\n",
     "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "10\n"
      ]
     }
    ],
@@ -99,6 +98,8 @@
     "\n",
     "filenames = ['log_single_run.pkl']\n",
     "\n",
+    "filenames = ['log_evidential_pa_earlier.pkl']\n",
+    "\n",
     "#filename_mcd = 'log_mcd_pa_earlydate_classesmode_false.pkl'\n",
     "results = []\n",
     "for filename in filenames:\n",
@@ -111,54 +112,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.DataFrame(columns=['sUEO','ECE (10 bins)','F1','F1 low','F1 high','F1 audit','UEO'])\n"
+    "# df = pd.DataFrame(columns=['sUEO','ECE (10 bins)','F1','F1 low','F1 high','F1 audit','UEO'])\n",
+    "df = pd.DataFrame(columns=['F1','F1 low','F1 high','F1 audit','UEO'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.841080483916035, 0.8141570958729208, 0.8569092307938756]"
+       "{'precision_L': array([0.87905189]),\n",
+       " 'recall_L': array([0.86686715]),\n",
+       " 'recall_Ltotal': array([0.57884523]),\n",
+       " 'AA': array([0.0299967]),\n",
+       " 'precision_H': array([0.26446199]),\n",
+       " 'recall_H': array([0.08520024]),\n",
+       " 'UEO': array([0.16499283]),\n",
+       " 'f1_L': array([0.872917]),\n",
+       " 'f1_H': array([0.12887995]),\n",
+       " 'f1': 68.78}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[results[x]['other_uncertainty_metrics']['sUEO'] for x in range(len(results))]\n"
+    "results[0]['uncertainty_result']['metrics']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[68.78, 72.54, 69.11, 73.89, 73.5, 71.33, 71.55, 72.93, 74.56, 75.51]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[results[x]['uncertainty_result']['metrics']['f1'] for x in range(len(results))]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    sUEO  ECE (10 bins)    F1  F1 low  F1 high  F1 audit    UEO\n",
-      "0  0.841          0.004  84.5    96.3     70.2      98.0  0.116\n",
-      "1  0.814          0.005  82.0    95.1     60.1      96.9  0.134\n",
-      "2  0.857          0.004  86.0    96.9     71.6      98.2  0.108\n"
+      "     F1  F1 low  F1 high  F1 audit    UEO\n",
+      "0  68.8    87.3     12.9      91.5  0.165\n",
+      "1  72.5    90.8     32.7      94.8  0.148\n",
+      "2  69.1    85.4      8.9      90.3  0.139\n",
+      "3  73.9    90.7     44.7      95.0  0.146\n",
+      "4  73.5    91.8     35.9      95.4  0.150\n",
+      "5  71.3    91.5     38.4      95.6  0.167\n",
+      "6  71.6    84.8     21.5      89.4  0.126\n",
+      "7  72.9    91.9     31.7      95.4  0.152\n",
+      "8  74.6    91.4     47.8      95.6  0.144\n",
+      "9  75.5    92.5     45.3      95.9  0.148\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "df['sUEO'] = [np.round(results[x]['other_uncertainty_metrics']['sUEO'], 3) for x in range(len(results))]\n",
-    "df['ECE (10 bins)'] = [np.round(results[x]['other_uncertainty_metrics']['ece_score'], 3) for x in range(len(results))]\n",
+    "# df['sUEO'] = [np.round(results[x]['other_uncertainty_metrics']['sUEO'], 3) for x in range(len(results))]\n",
+    "# df['ECE (10 bins)'] = [np.round(results[x]['other_uncertainty_metrics']['ece_score'], 3) for x in range(len(results))]\n",
     "df['F1'] = [np.round(results[x]['uncertainty_result']['metrics']['f1'], 1) for x in range(len(results))]\n",
     "\n",
     "df['F1 low'] = [np.round(np.squeeze(results[x]['uncertainty_result']['metrics']['f1_L'])*100, 1) for x in range(len(results))]\n",
@@ -171,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
