--- a/log_analyze.ipynb
+++ b/log_analyze.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -12,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,19 +46,50 @@
     "from src import metrics as _metric\n",
     "from src.manager.evidential import getMassFcn2D\n",
     "import pandas as pd\n",
-    "import sys"
+    "import sys\n",
+    "import json\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('config/config.json', 'r') as f:\n",
+    "    config = json.load(f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config['get_multiple_metrics']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "4\n"
      ]
     }
    ],
@@ -99,6 +139,11 @@
     "filenames = ['log_single_run.pkl']\n",
     "\n",
     "filenames = ['log_evidential_pa_earlier.pkl']\n",
+    "filenames = ['log_evidential_ms_earlier.pkl']\n",
+    "filenames = ['log_mcd_ms_earlier.pkl']\n",
+    "filenames = ['log_mcd_pi_earlier2.pkl']\n",
+    "\n",
+    "filenames = ['log_evidential_pi_earlier.pkl']\n",
     "\n",
     "#filename_mcd = 'log_mcd_pa_earlydate_classesmode_false.pkl'\n",
     "results = []\n",
@@ -112,67 +157,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "# df = pd.DataFrame(columns=['sUEO','ECE (10 bins)','F1','F1 low','F1 high','F1 audit','UEO'])\n",
-    "df = pd.DataFrame(columns=['F1','F1 low','F1 high','F1 audit','UEO'])\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if config['get_multiple_metrics'] == False:\n",
+    "    results[0]['uncertainty_result']['metrics']\n",
+    "else:\n",
+    "    results[0]['pred_entropy']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'precision_L': array([0.87905189]),\n",
-       " 'recall_L': array([0.86686715]),\n",
-       " 'recall_Ltotal': array([0.57884523]),\n",
-       " 'AA': array([0.0299967]),\n",
-       " 'precision_H': array([0.26446199]),\n",
-       " 'recall_H': array([0.08520024]),\n",
-       " 'UEO': array([0.16499283]),\n",
-       " 'f1_L': array([0.872917]),\n",
-       " 'f1_H': array([0.12887995]),\n",
-       " 'f1': 68.78}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[53.06, 45.57, 55.94, 54.34]\n"
+     ]
     }
    ],
    "source": [
-    "results[0]['uncertainty_result']['metrics']"
+    "if config['get_multiple_metrics'] == False:\n",
+    "    print([results[x]['uncertainty_result']['metrics']['f1'] for x in range(len(results))])\n",
+    "else:\n",
+    "    print([results[x]['pred_entropy']['metrics']['f1'] for x in range(len(results))])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[68.78, 72.54, 69.11, 73.89, 73.5, 71.33, 71.55, 72.93, 74.56, 75.51]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
     }
    ],
    "source": [
-    "[results[x]['uncertainty_result']['metrics']['f1'] for x in range(len(results))]\n"
+    "print(len(results))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -180,16 +224,10 @@
      "output_type": "stream",
      "text": [
       "     F1  F1 low  F1 high  F1 audit    UEO\n",
-      "0  68.8    87.3     12.9      91.5  0.165\n",
-      "1  72.5    90.8     32.7      94.8  0.148\n",
-      "2  69.1    85.4      8.9      90.3  0.139\n",
-      "3  73.9    90.7     44.7      95.0  0.146\n",
-      "4  73.5    91.8     35.9      95.4  0.150\n",
-      "5  71.3    91.5     38.4      95.6  0.167\n",
-      "6  71.6    84.8     21.5      89.4  0.126\n",
-      "7  72.9    91.9     31.7      95.4  0.152\n",
-      "8  74.6    91.4     47.8      95.6  0.144\n",
-      "9  75.5    92.5     45.3      95.9  0.148\n"
+      "0  53.1    60.4     15.2      64.4  0.094\n",
+      "1  45.6    53.2     15.7      57.9  0.122\n",
+      "2  55.9    63.8     22.0      69.0  0.090\n",
+      "3  54.3    60.1     14.2      65.1  0.069\n"
      ]
     }
    ],
@@ -197,19 +235,42 @@
     "\n",
     "# df['sUEO'] = [np.round(results[x]['other_uncertainty_metrics']['sUEO'], 3) for x in range(len(results))]\n",
     "# df['ECE (10 bins)'] = [np.round(results[x]['other_uncertainty_metrics']['ece_score'], 3) for x in range(len(results))]\n",
-    "df['F1'] = [np.round(results[x]['uncertainty_result']['metrics']['f1'], 1) for x in range(len(results))]\n",
+    "if config['get_multiple_metrics'] == False:\n",
+    "    df = pd.DataFrame(columns=['F1','F1 low','F1 high','F1 audit','UEO'])\n",
     "\n",
-    "df['F1 low'] = [np.round(np.squeeze(results[x]['uncertainty_result']['metrics']['f1_L'])*100, 1) for x in range(len(results))]\n",
-    "df['F1 high'] = [np.round(np.squeeze(results[x]['uncertainty_result']['metrics']['f1_H'])*100, 1) for x in range(len(results))]\n",
-    "df['F1 audit'] = [np.round(np.squeeze(results[x]['uncertainty_result']['metrics_audited']['f1'])*100, 1) for x in range(len(results))]\n",
-    "df['UEO'] = [np.round(np.squeeze(results[x]['uncertainty_result']['metrics']['UEO']), 3) for x in range(len(results))]\n",
+    "    df['F1'] = [np.round(results[x]['uncertainty_result']['metrics']['f1'], 1) for x in range(len(results))]\n",
     "\n",
-    "print(df.squeeze())"
+    "    df['F1 low'] = [np.round(np.squeeze(results[x]['uncertainty_result']['metrics']['f1_L'])*100, 1) for x in range(len(results))]\n",
+    "    df['F1 high'] = [np.round(np.squeeze(results[x]['uncertainty_result']['metrics']['f1_H'])*100, 1) for x in range(len(results))]\n",
+    "    df['F1 audit'] = [np.round(np.squeeze(results[x]['uncertainty_result']['metrics_audited']['f1'])*100, 1) for x in range(len(results))]\n",
+    "    df['UEO'] = [np.round(np.squeeze(results[x]['uncertainty_result']['metrics']['UEO']), 3) for x in range(len(results))]\n",
+    "\n",
+    "else:\n",
+    "    df = pd.DataFrame(columns=['Uncertainty Metric','F1','F1 low','F1 high','F1 audit','UEO'])\n",
+    "    uncertainty_metrics = ['pred_entropy', 'pred_var', 'MI', 'KL']\n",
+    "\n",
+    "    for metric in uncertainty_metrics:\n",
+    "        df_metric = pd.DataFrame(columns=['Uncertainty Metric','F1','F1 low','F1 high','F1 audit','UEO'])\n",
+    "        df_metric['Uncertainty Metric'] = np.repeat(metric, len(results))\n",
+    "        df_metric['F1'] = [np.round(results[x][metric]['metrics']['f1'], 1) for x in range(len(results))]\n",
+    "\n",
+    "        df_metric['F1 low'] = [np.round(np.squeeze(results[x][metric]['metrics']['f1_L'])*100, 1) for x in range(len(results))]\n",
+    "        df_metric['F1 high'] = [np.round(np.squeeze(results[x][metric]['metrics']['f1_H'])*100, 1) for x in range(len(results))]\n",
+    "        df_metric['F1 audit'] = [np.round(np.squeeze(results[x][metric]['metrics_audited']['f1'])*100, 1) for x in range(len(results))]\n",
+    "        df_metric['UEO'] = [np.round(np.squeeze(results[x][metric]['metrics']['UEO']), 3) for x in range(len(results))]\n",
+    "        print(\"metric, len(df_metric)\", metric, len(df_metric))\n",
+    "        df = pd.concat([df, df_metric])\n",
+    "        print(\"len(df)\",len(df))\n",
+    "\n",
+    "print(df.squeeze())\n",
+    "\n",
+    "\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,26 +279,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    0.234\n",
-       "1    0.540\n",
-       "2    0.159\n",
-       "3    0.264\n",
-       "4    0.188\n",
-       "5    0.197\n",
-       "6    0.139\n",
-       "7    0.168\n",
-       "8    0.199\n",
-       "9    0.269\n",
-       "Name: UEO, dtype: float64"
+       "0    0.123\n",
+       "1     0.15\n",
+       "2    0.119\n",
+       "3    0.103\n",
+       "4    0.123\n",
+       "5    0.122\n",
+       "0    0.185\n",
+       "1    0.261\n",
+       "2    0.208\n",
+       "3    0.157\n",
+       "4    0.175\n",
+       "5     0.19\n",
+       "0    0.076\n",
+       "1    0.145\n",
+       "2    0.103\n",
+       "3    0.079\n",
+       "4    0.074\n",
+       "5    0.109\n",
+       "0     0.06\n",
+       "1    0.127\n",
+       "2    0.086\n",
+       "3     0.06\n",
+       "4    0.056\n",
+       "5    0.089\n",
+       "Name: UEO, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
