--- a/save_georeferenced.ipynb
+++ b/save_georeferenced.ipynb
@@ -20,8 +20,8 @@
     "from src import metrics as _metrics\n",
     "from src.dataset import (\n",
     "    DeforestationTime, MultipleDates,\n",
-    "    PA, PADeforestationTime, PADistanceMap, PAMultipleDates, \n",
-    "    MT, MTDeforestationTime, MTMultipleDates\n",
+    "    PA, PAMultipleDates, \n",
+    "    MT, MTMultipleDates, MSMultipleDates\n",
     ")\n",
     "from src import training_generator as generator\n",
     "from src.patchesHandler import PatchesHandler, PatchesHandlerMultipleDates\n",
@@ -29,7 +29,8 @@
     "import matplotlib\n",
     "\n",
     "from tifffile import imsave\n",
-    "import src.rasterTools as rasterTools\n"
+    "import src.rasterTools as rasterTools\n",
+    "from tensorflow.keras.models import load_model"
    ]
   },
   {
@@ -65,10 +66,16 @@
     "else:\n",
     "\tdates = [2019, 2020]\n",
     "'''\n",
+    "# dates = [2018, 2019]\n",
+    "# dataset = PAMultipleDates(dates = dates, # dates = [2017, 2018, 2019]. [2018, 2019]. [2015, 2016, 2017, 2018]\n",
+    "# \taddPastDeforestationInput = addPastDeforestationInput,\n",
+    "# \tborderBuffer = 2)\t\n",
+    "\n",
     "dates = [2018, 2019]\n",
-    "dataset = PAMultipleDates(dates = dates, # dates = [2017, 2018, 2019]. [2018, 2019]. [2015, 2016, 2017, 2018]\n",
+    "dataset =  MSMultipleDates(dates = dates, # dates = [2017, 2018, 2019]. [2018, 2019]. [2015, 2016, 2017, 2018]\n",
     "\taddPastDeforestationInput = addPastDeforestationInput,\n",
     "\tborderBuffer = 2)\t\n",
+    "\n",
     "# dates = [2019, 2020]\n",
     "# dataset = MTMultipleDates(dates = dates, # dates = [2016,2017,2018,2019]\n",
     "# \taddPastDeforestationInput = addPastDeforestationInput,\n",
@@ -94,6 +101,11 @@
     "\tif type(dataset) == MTMultipleDates:\n",
     "\t\t# exp_ids = [108, 109, 110, 111, 112, 113, 114, 115, 116, 117] # same date\n",
     "\t\texp_ids = [130, 132, 133, 134, 135, 136, 137, 1125, 1124, 1123] # earlier date\n",
+    "\t\tthreshold_uncertainty = 0.1722648842106805\n",
+    "\n",
+    "\tif type(dataset) == MSMultipleDates:\n",
+    "\t\t\n",
+    "\t\texp = 30 # earlier date\n",
     "\t\tthreshold_uncertainty = 0.1722648842106805\n",
     "\n",
     "else:\n",
@@ -638,13 +650,15 @@
     "            # Recinstructing predicted map\n",
     "            start_test = time.time()\n",
     "\n",
-    "            path_exp = dataset.paths.experiment + 'exp' + str(exp_ids[tm])\n",
+    "            path_exp = dataset.paths.experiment + 'exp' + str(exp) # exp_ids[tm]\n",
     "            path_models = path_exp + '/models'\n",
     "            # ic(path_models+ '/' + method +'_'+str(0)+'.h5')\n",
-    "            model = load_model(path_models+ '/' + method +'_'+str(0)+'.h5', compile=False)\n",
-    "            for l in range(1, len(model.layers)):\n",
+    "            path_repetition = path_models+ '/' + method +'_'+str(tm)+'.h5'\n",
+    "            print(\"Loading model in:\", path_repetition)\n",
+    "            model = load_model(path_repetition, compile=False)\n",
+    "            for l in range(1, len(model.layers)): #WHY 1?\n",
     "                new_model.layers[l].set_weights(model.layers[l].get_weights())\n",
-    "            \n",
+    "                \n",
     "            '''\n",
     "            args_network = {'patch_size_rows': patch_size_rows,\n",
     "                'patch_size_cols': patch_size_cols,\n",
