--- a/log_analyze.ipynb
+++ b/log_analyze.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,9 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensorflow ver. 2.6.0\n"
+     ]
+    }
+   ],
    "source": [
     "from icecream import ic\n",
     "import os\n",
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +70,7 @@
        "False"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,14 +81,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'output/log/log_single_run_pi_earlier_l1c'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32md:\\Jorge\\deforestation_uncertainty\\log_analyze.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 65>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Jorge/deforestation_uncertainty/log_analyze.ipynb#W4sZmlsZQ%3D%3D?line=63'>64</a>\u001b[0m results \u001b[39m=\u001b[39m []\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Jorge/deforestation_uncertainty/log_analyze.ipynb#W4sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m \u001b[39mfor\u001b[39;00m filename \u001b[39min\u001b[39;00m filenames:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Jorge/deforestation_uncertainty/log_analyze.ipynb#W4sZmlsZQ%3D%3D?line=65'>66</a>\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(os\u001b[39m.\u001b[39;49mpath\u001b[39m.\u001b[39;49mjoin(folder, filename), \u001b[39m'\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m handle:\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Jorge/deforestation_uncertainty/log_analyze.ipynb#W4sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m         results\u001b[39m.\u001b[39mextend(pickle\u001b[39m.\u001b[39mload(handle))\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Jorge/deforestation_uncertainty/log_analyze.ipynb#W4sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39m(results))\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'output/log/log_single_run_pi_earlier_l1c'"
      ]
     }
    ],
@@ -144,6 +147,17 @@
     "filenames = ['log_mcd_pi_earlier2.pkl']\n",
     "\n",
     "filenames = ['log_evidential_pi_earlier.pkl']\n",
+    "filenames = ['log_mcd_ms_earlier_l1c.pkl',\n",
+    "             'log_mcd_ms_earlier_l1c2.pkl']\n",
+    "filenames = ['log_evidential_ms_earlier_l1c.pkl',\n",
+    "             'log_evidential_ms_earlier_l1c2.pkl']\n",
+    "\n",
+    "filenames = ['log_evidential_pi_earlier_l1c.pkl',\n",
+    "            'log_evidential_pi_earlier_l1c2.pkl']\n",
+    "\n",
+    "filenames = ['log_single_run_pi_earlier_l1c.pkl']\n",
+    "\n",
+    "\n",
     "\n",
     "#filename_mcd = 'log_mcd_pa_earlydate_classesmode_false.pkl'\n",
     "results = []\n",
@@ -157,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[53.06, 45.57, 55.94, 54.34]\n"
+      "[57.46, 49.98, 49.64, 59.69, 0.0, 60.41, 49.93, 56.29, 61.67, 59.39, 43.71, 42.77, 56.17]\n"
      ]
     }
    ],
@@ -199,14 +213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "13\n"
      ]
     }
    ],
@@ -216,18 +230,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     F1  F1 low  F1 high  F1 audit    UEO\n",
-      "0  53.1    60.4     15.2      64.4  0.094\n",
-      "1  45.6    53.2     15.7      57.9  0.122\n",
-      "2  55.9    63.8     22.0      69.0  0.090\n",
-      "3  54.3    60.1     14.2      65.1  0.069\n"
+      "      F1  F1 low  F1 high  F1 audit    UEO\n",
+      "0   57.5    60.6     10.1      62.9  0.045\n",
+      "1   50.0    53.0      9.8      55.5  0.050\n",
+      "2   49.6    52.6      5.9      55.4  0.047\n",
+      "3   59.7    65.8     18.4      70.1  0.080\n",
+      "4    0.0     NaN      NaN      85.6  0.138\n",
+      "5   60.4    66.8     14.3      69.9  0.083\n",
+      "6   49.9    54.0     14.3      57.4  0.069\n",
+      "7   56.3    59.3     10.3      62.1  0.041\n",
+      "8   61.7    68.8     24.4      73.0  0.102\n",
+      "9   59.4    66.2     18.5      69.4  0.094\n",
+      "10  43.7    46.4     13.2      49.5  0.061\n",
+      "11  42.8    44.8      6.0      47.4  0.042\n",
+      "12  56.2    63.2     11.9      66.5  0.105\n"
      ]
     }
    ],
@@ -270,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
