--- a/log_analyze.ipynb
+++ b/log_analyze.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -12,17 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tensorflow ver. 2.6.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from icecream import ic\n",
     "import os\n",
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +71,7 @@
        "False"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,18 +82,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'output/log/log_single_run_pi_earlier_l1c'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32md:\\Jorge\\deforestation_uncertainty\\log_analyze.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 65>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Jorge/deforestation_uncertainty/log_analyze.ipynb#W4sZmlsZQ%3D%3D?line=63'>64</a>\u001b[0m results \u001b[39m=\u001b[39m []\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Jorge/deforestation_uncertainty/log_analyze.ipynb#W4sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m \u001b[39mfor\u001b[39;00m filename \u001b[39min\u001b[39;00m filenames:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Jorge/deforestation_uncertainty/log_analyze.ipynb#W4sZmlsZQ%3D%3D?line=65'>66</a>\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(os\u001b[39m.\u001b[39;49mpath\u001b[39m.\u001b[39;49mjoin(folder, filename), \u001b[39m'\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m handle:\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Jorge/deforestation_uncertainty/log_analyze.ipynb#W4sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m         results\u001b[39m.\u001b[39mextend(pickle\u001b[39m.\u001b[39mload(handle))\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Jorge/deforestation_uncertainty/log_analyze.ipynb#W4sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39m(results))\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'output/log/log_single_run_pi_earlier_l1c'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "8\n",
+      "11\n",
+      "14\n"
      ]
     }
    ],
@@ -159,6 +159,17 @@
     "\n",
     "\n",
     "\n",
+    "filenames = ['log_mcd.pkl']\n",
+    "filenames = ['log_single_run_ms_earlier_l1c2.pkl']\n",
+    "\n",
+    "filenames = ['log_mcd_ms_earlier_l1c2.pkl']\n",
+    "\n",
+    "filenames = ['log_evidential_ms_earlier_l1c2.pkl',\n",
+    "    'log_evidential_ms_earlier_l1c2_2.pkl',\n",
+    "    'log_evidential_ms_earlier_l1c2_3.pkl',\n",
+    "    'log_evidential_ms_earlier_l1c2_4.pkl']\n",
+    "\n",
+    "\n",
     "#filename_mcd = 'log_mcd_pa_earlydate_classesmode_false.pkl'\n",
     "results = []\n",
     "for filename in filenames:\n",
@@ -171,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,14 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[57.46, 49.98, 49.64, 59.69, 0.0, 60.41, 49.93, 56.29, 61.67, 59.39, 43.71, 42.77, 56.17]\n"
+      "[73.69, 86.62, 86.16, 71.52, 0.0, 85.97, 87.59, 0.0, 88.67, 82.17, 77.14, 86.15, 85.68, 80.35]\n"
      ]
     }
    ],
@@ -213,14 +224,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13\n"
+      "14\n"
      ]
     }
    ],
@@ -230,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -238,19 +249,20 @@
      "output_type": "stream",
      "text": [
       "      F1  F1 low  F1 high  F1 audit    UEO\n",
-      "0   57.5    60.6     10.1      62.9  0.045\n",
-      "1   50.0    53.0      9.8      55.5  0.050\n",
-      "2   49.6    52.6      5.9      55.4  0.047\n",
-      "3   59.7    65.8     18.4      70.1  0.080\n",
-      "4    0.0     NaN      NaN      85.6  0.138\n",
-      "5   60.4    66.8     14.3      69.9  0.083\n",
-      "6   49.9    54.0     14.3      57.4  0.069\n",
-      "7   56.3    59.3     10.3      62.1  0.041\n",
-      "8   61.7    68.8     24.4      73.0  0.102\n",
-      "9   59.4    66.2     18.5      69.4  0.094\n",
-      "10  43.7    46.4     13.2      49.5  0.061\n",
-      "11  42.8    44.8      6.0      47.4  0.042\n",
-      "12  56.2    63.2     11.9      66.5  0.105\n"
+      "0   73.7    87.7     36.6      90.3  0.092\n",
+      "1   86.6    90.4     73.8      93.0  0.027\n",
+      "2   86.2    90.6     69.8      93.0  0.029\n",
+      "3   71.5    85.8     33.6      88.5  0.103\n",
+      "4    0.0     NaN      NaN     100.0  0.008\n",
+      "5   86.0    89.0      6.1      89.7  0.015\n",
+      "6   87.6    91.6     69.4      93.4  0.025\n",
+      "7    0.0     NaN      NaN      95.2  0.183\n",
+      "8   88.7    93.2     73.2      95.0  0.028\n",
+      "9   82.2    90.2     52.3      92.1  0.049\n",
+      "10  77.1    91.7     36.2      93.7  0.083\n",
+      "11  86.2    92.4     65.1      94.5  0.036\n",
+      "12  85.7    91.3     64.8      93.6  0.034\n",
+      "13  80.4    92.3     43.4      94.2  0.066\n"
      ]
     }
    ],
@@ -293,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
