--- a/log_analyze.ipynb
+++ b/log_analyze.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,9 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensorflow ver. 2.6.0\n"
+     ]
+    }
+   ],
    "source": [
     "from icecream import ic\n",
     "import os\n",
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +70,7 @@
        "False"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,17 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "8\n",
-      "11\n",
-      "14\n"
+      "20\n"
      ]
     }
    ],
@@ -169,7 +165,14 @@
     "    'log_evidential_ms_earlier_l1c2_3.pkl',\n",
     "    'log_evidential_ms_earlier_l1c2_4.pkl']\n",
     "\n",
+    "filenames = ['log_mcd_ms_current_l1c2.pkl',\n",
+    "    'log_mcd_ms_current_l1c2_2.pkl',\n",
+    "    'log_mcd_ms_current_l1c2_3.pkl']\n",
     "\n",
+    "filenames = ['log_single_run_current_l1c2.pkl']\n",
+    "filenames = ['log_single_run_ms_current_l1c2.pkl']\n",
+    "\n",
+    "filenames = ['log_evidential_ms_current_l1c2.pkl']\n",
     "#filename_mcd = 'log_mcd_pa_earlydate_classesmode_false.pkl'\n",
     "results = []\n",
     "for filename in filenames:\n",
@@ -182,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,14 +207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[73.69, 86.62, 86.16, 71.52, 0.0, 85.97, 87.59, 0.0, 88.67, 82.17, 77.14, 86.15, 85.68, 80.35]\n"
+      "[87.23, 92.0, 87.16, 89.95, 0.0, 86.28, 84.42, 89.81, 82.43, 81.67, 88.02, 82.74, 87.75, 83.82, 87.44, 88.01, 0.0, 0.0, 86.3, 79.65]\n"
      ]
     }
    ],
@@ -224,14 +227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14\n"
+      "20\n"
      ]
     }
    ],
@@ -241,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -249,20 +252,26 @@
      "output_type": "stream",
      "text": [
       "      F1  F1 low  F1 high  F1 audit    UEO\n",
-      "0   73.7    87.7     36.6      90.3  0.092\n",
-      "1   86.6    90.4     73.8      93.0  0.027\n",
-      "2   86.2    90.6     69.8      93.0  0.029\n",
-      "3   71.5    85.8     33.6      88.5  0.103\n",
-      "4    0.0     NaN      NaN     100.0  0.008\n",
-      "5   86.0    89.0      6.1      89.7  0.015\n",
-      "6   87.6    91.6     69.4      93.4  0.025\n",
-      "7    0.0     NaN      NaN      95.2  0.183\n",
-      "8   88.7    93.2     73.2      95.0  0.028\n",
-      "9   82.2    90.2     52.3      92.1  0.049\n",
-      "10  77.1    91.7     36.2      93.7  0.083\n",
-      "11  86.2    92.4     65.1      94.5  0.036\n",
-      "12  85.7    91.3     64.8      93.6  0.034\n",
-      "13  80.4    92.3     43.4      94.2  0.066\n"
+      "0   87.2    94.2     59.3      95.2  0.043\n",
+      "1   92.0    96.3     73.6      97.0  0.025\n",
+      "2   87.2    93.1     47.0      94.1  0.035\n",
+      "3   90.0    95.9     72.1      97.0  0.034\n",
+      "4    0.0     NaN      NaN      97.7  0.252\n",
+      "5   86.3    93.9     42.8      94.8  0.043\n",
+      "6   84.4    91.9     53.7      93.4  0.047\n",
+      "7   89.8    94.8     41.2      95.3  0.028\n",
+      "8   82.4    90.5     44.7      91.8  0.053\n",
+      "9   81.7    90.3     36.7      91.4  0.057\n",
+      "10  88.0    92.6     18.5      92.9  0.026\n",
+      "11  82.7    93.8     23.5      94.4  0.067\n",
+      "12  87.8    93.5     27.0      94.1  0.032\n",
+      "13  83.8    92.6     41.6      93.6  0.054\n",
+      "14  87.4    94.2     53.1      95.1  0.040\n",
+      "15  88.0    95.2     46.6      95.8  0.041\n",
+      "16   0.0     NaN      NaN      97.8  0.253\n",
+      "17   0.0     NaN      NaN      97.7  0.252\n",
+      "18  86.3    93.8     53.6      95.0  0.043\n",
+      "19  79.6    87.6     33.9      89.1  0.053\n"
      ]
     }
    ],
@@ -305,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
