--- a/log_analyze.ipynb
+++ b/log_analyze.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -12,17 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tensorflow ver. 2.6.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from icecream import ic\n",
     "import os\n",
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +71,7 @@
        "False"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20\n"
+      "10\n"
      ]
     }
    ],
@@ -174,6 +175,15 @@
     "\n",
     "filenames = ['log_evidential_ms_current_l1c2.pkl']\n",
     "#filename_mcd = 'log_mcd_pa_earlydate_classesmode_false.pkl'\n",
+    "filenames = ['log_evidential_mt_earlier_l1c2.pkl',\n",
+    "             'log_evidential_mt_earlier_l1c2_2.pkl',\n",
+    "             'log_evidential_mt_earlier_l1c2_3.pkl']\n",
+    "\n",
+    "filenames = ['log_mcd_pi_current_l1c2.pkl']\n",
+    "\n",
+    "filenames = ['log_single_run_pi_current_l1c2.pkl']\n",
+    "# filenames = ['log_evidential_pi_current_l1c2.pkl',\n",
+    "#              'log_evidential_pi_current_l1c2_2.pkl']\n",
     "results = []\n",
     "for filename in filenames:\n",
     "    with open(os.path.join(folder, filename), 'rb') as handle:\n",
@@ -185,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,14 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[87.23, 92.0, 87.16, 89.95, 0.0, 86.28, 84.42, 89.81, 82.43, 81.67, 88.02, 82.74, 87.75, 83.82, 87.44, 88.01, 0.0, 0.0, 86.3, 79.65]\n"
+      "[72.75, 62.45, 63.85, 70.02, 60.82, 67.77, 66.32, 64.58, 45.24, 59.82]\n"
      ]
     }
    ],
@@ -227,14 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20\n"
+      "10\n"
      ]
     }
    ],
@@ -244,34 +254,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      F1  F1 low  F1 high  F1 audit    UEO\n",
-      "0   87.2    94.2     59.3      95.2  0.043\n",
-      "1   92.0    96.3     73.6      97.0  0.025\n",
-      "2   87.2    93.1     47.0      94.1  0.035\n",
-      "3   90.0    95.9     72.1      97.0  0.034\n",
-      "4    0.0     NaN      NaN      97.7  0.252\n",
-      "5   86.3    93.9     42.8      94.8  0.043\n",
-      "6   84.4    91.9     53.7      93.4  0.047\n",
-      "7   89.8    94.8     41.2      95.3  0.028\n",
-      "8   82.4    90.5     44.7      91.8  0.053\n",
-      "9   81.7    90.3     36.7      91.4  0.057\n",
-      "10  88.0    92.6     18.5      92.9  0.026\n",
-      "11  82.7    93.8     23.5      94.4  0.067\n",
-      "12  87.8    93.5     27.0      94.1  0.032\n",
-      "13  83.8    92.6     41.6      93.6  0.054\n",
-      "14  87.4    94.2     53.1      95.1  0.040\n",
-      "15  88.0    95.2     46.6      95.8  0.041\n",
-      "16   0.0     NaN      NaN      97.8  0.253\n",
-      "17   0.0     NaN      NaN      97.7  0.252\n",
-      "18  86.3    93.8     53.6      95.0  0.043\n",
-      "19  79.6    87.6     33.9      89.1  0.053\n"
+      "     F1  F1 low  F1 high  F1 audit    UEO\n",
+      "0  72.8    81.4     22.8      82.9  0.116\n",
+      "1  62.4    70.9     16.5      73.0  0.137\n",
+      "2  63.8    72.0     21.7      75.0  0.116\n",
+      "3  70.0    79.9     26.0      82.7  0.128\n",
+      "4  60.8    67.4     13.0      69.6  0.104\n",
+      "5  67.8    76.5     23.4      79.1  0.126\n",
+      "6  66.3    75.4     24.8      78.4  0.128\n",
+      "7  64.6    73.8     15.1      75.4  0.144\n",
+      "8  45.2    46.9      6.5      49.5  0.036\n",
+      "9  59.8    67.4     15.3      70.3  0.121\n"
      ]
     }
    ],
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
