Fix landsat preview lims

--- a/run_single_experiment_evidential.ipynb
+++ b/run_single_experiment_evidential.ipynb
@@ -90,7 +90,7 @@
     "config = {\n",
     "\t\"training\": True,\n",
     "\t\"inferring\": True,\n",
-    "\t\"site\": \"MT\",\n",
+    "\t\"site\": \"PA\",\n",
     "\t\"training_date\": \"earlier\", # values: earlier, current\n",
     "\t\"mode\": \"evidential2\", # values: mcd, single_run, ensemble, evidential2\n",
     "\t\"uncertainty_method\": \"pred_entropy\", # pred_var MI pred_entropy KL pred_entropy_single\n",
